KnoxIDF - multi OP support